--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
+    "react-to-print": "^2.15.1",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
